--- a/src/less/brands.less
+++ b/src/less/brands.less
@@ -8,6 +8,10 @@
   background-position: center;
 }
 
+.brand-1-pass .brand-logo {
+  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19232343/mco-300x63.gif');
+}
+
 .brand-apepazza .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054743/apepazza-300x63.png');
 }
@@ -54,6 +58,11 @@
   background-size: auto 90%;
 }
 
+.brand-disney .brand-logo {
+  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19232340/Disney_Logo-300x63.gif');
+  background-size: auto 90%;
+}
+
 .brand-dna-digest .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054816/dna-digest-300x63.png');
 }
@@ -96,6 +105,10 @@
 .brand-linkedin .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19124734/LINKEDIN-300x63.png');
   background-size: auto 80%;
+}
+
+.brand-mco .brand-logo {
+  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19232343/mco-300x63.gif');
 }
 
 .brand-mumo-active .brand-logo {
@@ -202,7 +215,7 @@
 }
 
 .brand-wayra .brand-logo {
-  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054959/WAYRA-300x63.png');
+  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19230130/wayra-png-300x63.png');
   background-size: auto 80%;
 }
 
