--- a/src/less/process.less
+++ b/src/less/process.less
@@ -3,23 +3,18 @@ body.process h2:not(.about-title) {
   text-align: center;
 }
 
-body.process h1:not(.logo-title):after,
-body.process h2.step-wrap:after {
+body.process h1:not(.logo-title):after {
   content: '';
   display: inline-block;
   padding-top: 2em;
   height: 100%;
   width: 3em;
-  background: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/30072207/prev-3.jpg') no-repeat;
+  background: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19222718/prev.jpg') no-repeat;
   background-size: 130%;
 }
 
 body.process h1:not(.logo-title):after {
   background-position: -20px -10px;
-}
-
-body.process h2.step-wrap:after {
-  background-position: -20px -70px;
 }
 
 body.process h3 {
@@ -59,15 +54,15 @@ body.process h3 {
 }
 
 .step-animal.step-minnow {
-  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/30072206/minnow-300x200.jpg');
+  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19222713/MINNOW-300x200.jpg');
 }
 
 .step-animal.step-dolphin {
-  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/30072204/dolphin-300x200.jpg');
+  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19222711/dolphin-300x200.jpg');
 }
 
 .step-animal.step-whale {
-  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/30072209/whale-300x150.jpg');
+  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19222714/WHALE-300x150.jpg');
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: 0 -1em;
