Tweak how it works page.

--- a/src/less/process.less
+++ b/src/less/process.less
@@ -54,11 +54,13 @@ body.process h3 {
 }
 
 .step-animal.step-minnow {
-  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19222713/MINNOW-300x200.jpg');
+  background: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19222713/MINNOW-300x200.jpg') no-repeat center center;
+  background-size: 40%;
 }
 
 .step-animal.step-dolphin {
-  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19222711/dolphin-300x200.jpg');
+  background: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/10/19222711/dolphin-300x200.jpg') no-repeat center center;
+  background-size: 60%;
 }
 
 .step-animal.step-whale {
