Add instagram link.

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -129,6 +129,7 @@
           <li class="pure-button vimeo"><a href="http://vimeo.com/mondotvuk" class="icon icon-vimeo"></a></li>
           <li class="pure-button youtube"><a href="http://youtube.com/mondotvuk" class="icon icon-play"></a></li>
           <li class="pure-button twitter"><a href="http://twitter.com/mondotvuk" class="icon icon-twitter"></a></li>
+          <li class="pure-button instagram"><a href="http://instagram.com/mondotv_uk" class="icon icon-instagram"></a></li>
           <li class="pure-button facebook"><a href="http://facebook.com/mondotvuk" class="icon icon-facebook"></a></li>
           <li class="pure-button linkedin"><a href="http://linkedin.com/mondotvuk" class="icon icon-linkedin"></a></li>
         </ul>
