--- a/src/less/main.less
+++ b/src/less/main.less
@@ -597,6 +597,12 @@ label[for="pure-file"] {
   border-color: #0077b5!important;
 }
 
+.instagram:hover,
+.instagram:hover > * {
+  color: #e1306c!important;
+  border-color: #e1306c!important;
+}
+
 /* Styling for the ngProgress itself */
 #ngProgress {
     margin: 0;
