Add instagram icon.

--- a/src/less/icons.less
+++ b/src/less/icons.less
@@ -107,6 +107,9 @@
 .icon-skype:before {
   content: "\75";
 }
+.icon-instagram:before {
+  content: "\68";
+}
 .icon-linkedin:before {
   content: "\63";
 }
