--- a/src/app/projects/projects.view.html
+++ b/src/app/projects/projects.view.html
@@ -1,6 +1,6 @@
 <div class="pure-g page-content">
   <section class="project-list">
-    <div class="pure-u-1 pure-u-lg-1-2 pure-u-xl-1-3 project-item" ng-repeat="project in vm.projects">
+    <div class="pure-u-1 pure-u-md-3 pure-u-lg-1-4 pure-u-xl-1-5 project-item" ng-repeat="project in vm.projects">
       <a ui-sref="project({ id: project.id, title: project.slug })" ng-class="project.tags" class="project-link">
         <h3>{{ project.title.rendered }}</h3>
         <span class="brand-logo" style="height:2em;"></span>
